--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
     align-content: center;
     justify-content: center;
     font-size: 60px;
-    width:210vh;
-    height: 500px;
+    width:220vh;
+    height: 700px;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 50px;
+    background-image: linear-gradient(red,white,green);
+   
 }
 
